<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/description_screen_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/margin_xx_small"
    android:paddingLeft="@dimen/margin_xx_small"
    android:paddingRight="@dimen/margin_xx_small"
    android:paddingStart="@dimen/margin_xx_small">
...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_medium"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/description_header"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_height="wrap_content"
            style="@style/HeaderTextStyle"
            tools:text="Header"/>

...
